Fix misalignment of the product page, caused by empty related products

--- a/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
+++ b/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
@@ -2732,6 +2732,7 @@ input[type="color"]:focus, .uneditable-input:focus {
     float: left;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 .product-press {
     width: 30%;
